FullQa New/src/LeanData/objects/Campaign_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Opportunities</relationshipLabel>
        <relationshipName>Campaign_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribution_Value__c</fullName>
        <label>Attribution Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Attribution_Percentage__c</fullName>
        <label>Campaign Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Attribution__c</fullName>
        <formula>Attribution_Value__c *  Campaign_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Attribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Attribution_Percentage__c</fullName>
        <label>Equal Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Attribution__c</fullName>
        <formula>Attribution_Value__c * Campaign_Member_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equal Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Created_Date_Time__c</fullName>
        <label>Campaign Member Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Created_Date__c</fullName>
        <label>Campaign Member Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Related_Object_2__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Member Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Related_Object__c</fullName>
        <label>Campaign Member Related Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status_Weight__c</fullName>
        <label>Campaign Member Status Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ROI__c</fullName>
        <formula>IF(  ISBLANK( Campaign__r.ActualCost ), null  ,   Campaign_Member_Attribution__c / Campaign__r.ActualCost  )</formula>
        <label>Campaign ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Type_Weight__c</fullName>
        <label>Campaign Type Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Opportunities</relationshipLabel>
        <relationshipName>Campaign_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Opportunities</relationshipLabel>
        <relationshipName>Campaign_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_Created_Date__c</fullName>
        <label>Converted Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Touch__c</fullName>
        <label>Cost Per Touch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_To_Opportunity_Close__c</fullName>
        <formula>Opportunity_Close_Date__c - Campaign_Member_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Opportunity Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Opportunity_Created__c</fullName>
        <formula>DATEVALUE(Opportunity__r.CreatedDate) -  Campaign_Member_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Opportunity Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Touch_Attribution_Percentage__c</fullName>
        <label>First Touch Equal Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>First_Touch_Attribution__c</fullName>
        <formula>Attribution_Value__c*First_Touch_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Touch Equal Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Attribution_Percentage__c</fullName>
        <label>Last Touch Equal Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Attribution__c</fullName>
        <formula>Attribution_Value__c*Last_Touch_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Touch Equal Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaign Opportunities</relationshipLabel>
        <relationshipName>Campaign_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Opportunity__c</fullName>
        <formula>IF( Campaign_Member_Created_Date__c  &gt;   DATEVALUE(Opportunity__r.CreatedDate)  , &quot;Existing&quot; , &quot;New&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Opportunity ( Deprecated )</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Campaign_Members__c</fullName>
        <label>Number of Campaign Members ( Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Origination__c</fullName>
        <formula>IF( Campaign_Member_Created_Date__c &gt; DATEVALUE(Opportunity__r.CreatedDate) , &quot;Influenced&quot; , &quot;Generated&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Origination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Index__c</fullName>
        <description>The index of the Opportunity Stage at the time of this touch occuring. I.e. 4 = The 4th status the Opportunity was in.</description>
        <externalId>true</externalId>
        <label>Opportunity Stage Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Touch_Stage__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Touch Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Opportunities</relationshipLabel>
        <relationshipName>Campaign_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority ( Deprecated )</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Object__c</fullName>
        <label>Report Object ( Deprecated )</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Touch_Order__c</fullName>
        <label>Touch Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch_Type__c</fullName>
        <label>Touch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Touch</fullName>
                </value>
                <value>
                    <fullName>Middle Touch</fullName>
                </value>
                <value>
                    <fullName>Last Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Attribution_Percentage__c</fullName>
        <label>Weighted Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_Attribution__c</fullName>
        <formula>Attribution_Value__c * Weighted_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_FT_Attribution_Percentage__c</fullName>
        <label>Weighted FT Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_First_Touch_Attribution__c</fullName>
        <formula>Weighted_FT_Attribution_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted First Touch Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_LT_Attribution_Percentage__c</fullName>
        <label>Weighted LT Attribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_Last_Touch_Attribution__c</fullName>
        <formula>Weighted_LT_Attribution_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Last Touch Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Campaign Opportunity</label>
    <nameField>
        <displayFormat>CO-{000000000}</displayFormat>
        <label>Campaign_Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>